# carteira-investimentos

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
migrations/: 20260624135710_create_users.sql  20260709152420_alter_users_timestampz.sql  20260709161924_alter_users_timestampz_with_not_null.sql  20260711085653_create_refresh_tokens.sql  20260715131413_create_assets.sql
src/: controllers.rs  errors.rs  extractors.rs  lib.rs  main.rs  models.rs  routes.rs  utils.rs
src/controllers/: assets_controller.rs  auth_controller.rs  health_controller.rs  html_controller.rs  users_controller.rs
src/database/: errors.rs
src/models/: assets_model.rs  refresh_token_model.rs  users_model.rs
templates/: assets.html.askama  index.html.askama  layout.html.askama  login.html.askama  register.html.askama
tests/: routes.rs
