[package]
name = "carteira-investimentos"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argon2 = { version = "0.5.3", features = ["std", "zeroize"] }
axum = { version = "0.8.9", features = ["macros"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
axum-tracing-opentelemetry = "0.38.0"
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
init-tracing-opentelemetry = { version = "0.38.1", features = ["metrics", "tracing_subscriber_ext"] }
jwt-simple = { version = "0.12.17", features = ["pure-rust"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "macros", "uuid", "chrono"] }
thiserror = "2.0.18"
time = "0.3.53"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1.44"
uuid = { version = "1.23.4", features = ["serde", "v7"] }
validator = { version = "0.20.0", features = ["derive", "unic"] }
